# Rasb_booth

./: COMMANDES_SCP.md  DEBUG_LOGS.md  DEPLOIEMENT_RAPIDE.md  DESACTIVER_TEMPLATES.md  FIX_PILLOW_ERROR.md  HOTSPOT.md  INSTALL_SERVICE.md  ROADMAP.md  TEMPLATES.md  TEMPLATES_FAQ.md  TRANSFERT_RASPBERRY.md  deploy-both-fixes.ps1  deploy-capture-date-fix.ps1  deploy-config-page.ps1  deploy-no-preview.ps1  deploy-pibooth-web.ps1  deploy-plugin-patch.ps1  deploy-template-fix.ps1  deploy-templates-scp.ps1  fix_pillow.sh  install_templates.sh  pibooth.service
pibooth/: booth.py
pibooth-no-buttons/: README.md  setup.cfg
pibooth-no-buttons/pibooth_no_buttons/: __init__.py
pibooth-picture-template/: pibooth_picture_template.py
pibooth-web-interface/: README.md  install.sh  setup.cfg  start-pibooth-web.sh
pibooth-web-interface/pibooth_web/: __init__.py  api.py  server.py
pibooth-web-interface/pibooth_web/static/: app.js  style.css
pibooth-web-interface/pibooth_web/static/css/: style.css
pibooth-web-interface/pibooth_web/static/js/: app.js
pibooth-web-interface/pibooth_web/templates/: config.html  index.html  templates.html
pibooth-web-interface/scripts/: setup_hotspot.sh
pibooth-web-interface/tests/: test_plugin.py
pibooth/camera/: gphoto.py
pibooth/plugins/: camera_plugin.py  view_plugin.py  virtual_buttons.py
script/: diagnostic.sh  install.sh  start-pibooth.sh  start_pibooth_remote.sh
tests/dslr_diag/: Canon EOS 1300D.txt
