[metadata]
name = pibooth-no-buttons
version = 1.0.0
description = Plugin to disable physical GPIO buttons in Pibooth
long_description = file: README.md
long_description_content_type = text/markdown
author = Pibooth Contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = pibooth_no_buttons
install_requires =
    pibooth

[options.entry_points]
pibooth =
    pibooth_no_buttons = pibooth_no_buttons