[metadata]
name = pibooth-web-interface
version = 1.0.0
description = Web interface plugin for Pibooth - control your photobooth from a browser
long_description = file: README.md
long_description_content_type = text/markdown
author = Pibooth Contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Flask

[options]
python_requires = >=3.7
packages = pibooth_web
include_package_data = True
install_requires =
    pibooth
    flask>=2.0.0
    flask-socketio>=5.0.0
    pillow>=8.0.0

[options.entry_points]
pibooth =
    pibooth_web = pibooth_web

[options.package_data]
pibooth_web =
    templates/*.html
    static/*.css
    static/*.js